force-app/main/default/objects/Account/fields/Agency_Trade_License_No_c__c.field-meta.xml
<CustomField>
    <fullName>Agency_Trade_License_No_c__c</fullName>
    <label>Agency Trade License No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>