force-app/main/default/objects/Account/fields/Company_Id_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Company_Id_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company 18 Digit Id</label>
    <type>Text</type>
</CustomField>