force-app/main/default/objects/Account/fields/pba__SystemAccountContact__c.field-meta.xml
<CustomField>
    <fullName>pba__SystemAccountContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System field. Do not expose this field to any user. This field must not be changed manually.</description>
    <inlineHelpText>System field. Do not expose this field to any user. This field must not be changed manually.</inlineHelpText>
    <label>SystemAccountContact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>