force-app/main/default/objects/Account/fields/pba__SystemIsIndividual__c.field-meta.xml
<CustomField>
    <fullName>pba__SystemIsIndividual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System field. Do not expose this field to any user. This field must not be changed manually.</description>
    <inlineHelpText>System field. Do not expose this field to any user. This field must not be changed manually.</inlineHelpText>
    <label>SystemIsIndividual</label>
    <type>Checkbox</type>
</CustomField>