force-app/main/default/objects/Account/fields/up__District__c.field-meta.xml
<CustomField>
    <fullName>up__District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>up__Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>South North East</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Nevada</fullName>
            </value>
            <value>
                <fullName>West California</fullName>
            </value>
            <value>
                <fullName>South California 234</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Test North East</fullName>
            </value>
            <value>
                <fullName>North Carolina</fullName>
            </value>
            <value>
                <fullName>Maine</fullName>
            </value>
            <value>
                <fullName>South California 23</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>