force-app/main/default/objects/Account/fields/Upload_ORN__c.field-meta.xml
<CustomField>
    <fullName>Upload_ORN__c</fullName>
    <label>Uploaded ORN?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>