force-app/main/default/objects/Account/fields/Upload_Year_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Upload_Year_of_Establishment__c</fullName>
    <label>Upload Year of Establishment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>