force-app/main/default/objects/Account/recordTypes/pba__Company_pb.recordType-meta.xml
<RecordType>
    <fullName>pba__Company_pb</fullName>
    <active>true</active>
    <label>Company</label>
</RecordType>