force-app/main/default/objects/Account/recordTypes/pba__Individual_pb.recordType-meta.xml
<RecordType>
    <fullName>pba__Individual_pb</fullName>
    <active>true</active>
    <label>SystemInternal</label>
</RecordType>