force-app/main/default/objects/Account/recordTypes/Third_Party_Agency.recordType-meta.xml
<RecordType>
    <fullName>Third_Party_Agency</fullName>
    <active>true</active>
    <label>3rd Party Agency</label>
</RecordType>