force-app/main/default/objects/Account/recordTypes/Third_Party_Agency_Client.recordType-meta.xml
<RecordType>
    <fullName>Third_Party_Agency_Client</fullName>
    <active>true</active>
    <label>3rd Party Agency Client</label>
</RecordType>