force-app/main/default/objects/Account/listViews/All_3rd_Party_Client_Agencies.listView-meta.xml
<ListView>
    <fullName>All_3rd_Party_Client_Agencies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Third_Party_Agency_Client</value>
    </filters>
    <label>All 3rd Party Client Agencies</label>
</ListView>