force-app/main/default/objects/Account/listViews/All_Agencies.listView-meta.xml
<ListView>
    <fullName>All_Agencies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
        <value>.</value>
    </filters>
    <label>All Agencies</label>
</ListView>