force-app/main/default/objects/Account/listViews/All_Companies.listView-meta.xml
<ListView>
    <fullName>All_Companies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
        <value>.</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.pba__Company_pb</value>
    </filters>
    <label>All Companies</label>
</ListView>