force-app/main/default/objects/Account/listViews/All_Company_Brokerages.listView-meta.xml
<ListView>
    <fullName>All_Company_Brokerages</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Brokerage</value>
    </filters>
    <filters>
        <field>pba__SystemIsIndividual__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Company Brokerages</label>
</ListView>