force-app/main/default/objects/Account/listViews/Just_My_Companies.listView-meta.xml
<ListView>
    <fullName>Just_My_Companies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>pba__SystemIsIndividual__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Companies</label>
</ListView>