force-app/main/default/objects/Account/listViews/Other_Agencies.listView-meta.xml
<ListView>
    <fullName>Other_Agencies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.pba__Company_pb</value>
    </filters>
    <label>Other Agencies</label>
</ListView>